@@ -1,3 +1,7 @@
+Sun Nov 07 11:39:40 2010  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: add recent files menu
+
 Tue Nov 02 11:44:08 2010  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/Makefile.am: Add the self test files that were missing to
